--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -44,7 +44,7 @@
             <li>your business is registered in England or you will do the grant-funded work in England</li>
             
           </ul>
-          <p class="govuk-body">Agricultural contractors can only use the grant for buying robotic and automatic technology.</p>
+          <p class="govuk-body">Agricultural contractors can only use the grant for buying farm productivity project items.</p>
         </div>
 
         <p>You can apply for up to:</p>
@@ -54,7 +54,7 @@
           </ul>
 
           <p>For farm productivity project items, the maximum grant you can claim is £500,000. The minimum grant is £25,000 (40% of £62,500).</p>
-          <p>For solar project items, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add technology (for example a battery) to a solar PV system you already have or to buy a new solar PV system.</p>
+          <p>For solar project items, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add solar project items (for example a battery) to a solar PV system you already have or to buy a new solar PV system.</p>
           <p>If you want to apply for both farm productivity and solar project grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
 
       
