--- a/app/views/robotics/current/technology-description.html
+++ b/app/views/robotics/current/technology-description.html
@@ -43,7 +43,8 @@
             </ul>
 
           </label>
-          <textarea class="govuk-textarea" id="more-detail" name="moreDetail" rows="5"></textarea>
+          <textarea class="govuk-textarea govuk-!-margin-bottom-2" id="more-detail" name="moreDetail" rows="7"></textarea>
+          <p class="govuk-hint">You have 250 characters remaining.</p>
         </div>
        
       
