--- a/app/views/robotics/current/project-impact.html
+++ b/app/views/robotics/current/project-impact.html
@@ -64,7 +64,7 @@ Will your project use data analytics to improve productivity?
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
          <p>RPA wants to fund projects that:</p>
          <ul class="govuk-list govuk-list--bullet">
