--- a/app/views/robotics/current/register-fail.html
+++ b/app/views/robotics/current/register-fail.html
@@ -31,6 +31,9 @@
           text: 'Scotland, Wales and Northern Ireland have other grants available.'
       }) }}
 
+      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments"  class="govuk-!-font-size-19">
+        See other grants you may be eligible for
+      </a></p>
 
 
       <!--See the <a href="">large countryside productivity grant guidance</a> for further information.</p>-->
