--- a/app/views/robotics/current/equipment-eligibility.html
+++ b/app/views/robotics/current/equipment-eligibility.html
@@ -120,7 +120,7 @@
      <h2 class="app-step-nav-related__heading">
       <span class="app-step-nav-related__pretitle">Eligibility</span>
       </h2>
-      <p>Automatic items must fit at least 2 criteria to be eligible for grant funding.</p>
+      <p>Automatic technology must fit at least 2 criteria to be eligible for grant funding.</p>
       
 
   </div>
