--- a/app/views/robotics/current/equipment-type.html
+++ b/app/views/robotics/current/equipment-type.html
@@ -80,8 +80,8 @@
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           
-          <p>Robotic items must fit all 4 criteria to be eligible.</p>
-          <p>Automatic items must fit at least 2 criteria to be eligible.</p>
+          <p>Robotic technology must fit all 4 criteria to be eligible.</p>
+          <p>Automatic technology must fit at least 2 criteria to be eligible.</p>
 
           </a>
       </div>
