--- a/app/views/robotics/current/labour-saved.html
+++ b/app/views/robotics/current/labour-saved.html
@@ -26,6 +26,9 @@
             <h1 class="govuk-fieldset__heading">
               How much manual labour will this technology replace?
             </h1>
+            <div class="govuk-hint">
+              One job is equal to 30 hours more per week
+            </div>
           </legend>
 
           <div class="govuk-radios">
@@ -68,9 +71,9 @@
 
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Manual labour shortage</span>
+          <span class="app-step-nav-related__pretitle">Funding priorities</span>
           </h2>
-          <p>Using robotic or automatic technologies can reduce the need to find manual labour.</p>
+          <p>RPA wants to fund the use of robotic or automatic technology due to the current manual labour shortage.</p>
 
       </div>
       </div>
