--- a/app/views/robotics/current/project-cost.html
+++ b/app/views/robotics/current/project-cost.html
@@ -65,7 +65,7 @@
       <div class="app-step-nav-related app-step-nav-related--singular">
         <h2 class="app-step-nav-related__heading">
 
-          <span class="app-step-nav-related__pretitle">Your project items</span>
+          <span class="app-step-nav-related__pretitle">Your project technology</span>
 
           </h2>
        
