--- a/app/views/robotics/current/robotic-eligibility.html
+++ b/app/views/robotics/current/robotic-eligibility.html
@@ -94,7 +94,7 @@
       <h2 class="app-step-nav-related__heading">
         <span class="app-step-nav-related__pretitle">Eligibility</span>
         </h2>
-        <p>Robotic items must fit all 4 criteria to be eligible. </p>
+        <p>Robotic technology must fit all 4 criteria to be eligible. </p>
       </div>
 
   </div>
