--- a/app/views/robotics/current/robotic-items.html
+++ b/app/views/robotics/current/robotic-items.html
@@ -238,7 +238,7 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>RPA will consider items that: </p>
+          <p>RPA will consider technology that: </p>
           <p>
               <ul class="govuk-list govuk-list--bullet">
                 <li>have a sensing system and can understand their environment</li>
