--- a/app/views/robotics/current/solar-installation.html
+++ b/app/views/robotics/current/solar-installation.html
@@ -46,7 +46,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-installation-2" name="solar-installation" type="checkbox" value="existing">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-installation-2">
-                  On an existing hardstanding area
+                  On or over an existing hardstanding area
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
@@ -82,7 +82,7 @@
           <p>Solar panels must be installed:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>on a rooftop</li>
-            <li>on an existing hardstanding area</li>
+            <li>on or over an existing hardstanding area</li>
             <li>floating (on a reservoir)</li>
           </ul>              
       </div>
