--- a/app/views/robotics/current/solar-panel-fail.html
+++ b/app/views/robotics/current/solar-panel-fail.html
@@ -29,7 +29,7 @@
       <p>Solar panels must be installed:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>on a rooftop</li>
-            <li>on an existing hardstanding area</li>
+            <li>on or over an existing hardstanding area</li>
             <li>floating (on a reservoir)</li>
           </ul>      
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
