--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -32,7 +32,7 @@
           <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What solar project items does your project need?
+                What solar items does your project need?
               </h1>
             </legend>
             <p class="govuk-hint">You can apply for grant funding to:</p>
@@ -53,7 +53,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-technology-2" name="solar-technology" type="checkbox" value="panels">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-technology-2">
-                  Solar panels
+                  Solar PV panels
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
