--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -32,7 +32,7 @@
         </h1>
         <p>Use this service to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>check if you can apply for a grant for your project (takes about 5 minutes)</li>
+          <li>check if you are eligible to apply for a grant for your project (takes about 5 minutes)</li>
           <li>check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)</li>
         </ul>
 
@@ -44,8 +44,10 @@
             <li>your business is registered in England or you will do the grant-funded work in England</li>
             
           </ul>
-          <p class="govuk-body">Agricultural contractors can only use the grant for buying farm productivity project items.</p>
+          <p class="govuk-body">Agricultural contractors can only apply for grant funding for robotic or automatic technology (farm productivity project items).</p>
         </div>
+
+        <h2 class="govuk-heading-m">What you can apply for</h2>
 
         <p>You can apply for up to:</p>
           <ul class="govuk-list govuk-list--bullet">
@@ -54,7 +56,7 @@
           </ul>
 
           <p>For farm productivity project items, the maximum grant you can claim is £500,000. The minimum grant is £25,000 (40% of £62,500).</p>
-          <p>For solar project items, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add solar project items (for example a battery) to a solar PV system you already have or to buy a new solar PV system.</p>
+          <p>For solar project items, the maximum grant you can claim is £100,000. The minimum grant is £15,000 (25% of £60,000). You can apply for grant funding to add solar project items (for example a battery) to a solar photovoltaic (PV) system you already have or to buy a new solar PV system.</p>
           <p>If you want to apply for both farm productivity and solar project grant funding, you must submit 2 separate applications. The maximum grant amount for both projects together is £500,000.</p>
 
       
