--- a/app/views/robotics/current/technology-criteria-fail.html
+++ b/app/views/robotics/current/technology-criteria-fail.html
@@ -37,13 +37,13 @@
 
         <form id="mainForm" class="form" action="project-items-summary" method="post">
         <button class="govuk-button" data-module="govuk-button">          
-          Continue with eligible items
+          Continue with eligible technology
         </button>
         </form>
 
         <form id="mainForm" class="form" action="robotic-items" method="post">
         <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-          Add another item
+          Add another technology
         </button>
         </form>
 
@@ -52,7 +52,7 @@
       {% else %}
 
       <form id="mainForm" class="form" action="robotic-items" method="post">
-        <button class="govuk-button" data-module="govuk-button">Add another item</button>
+        <button class="govuk-button" data-module="govuk-button">Add another technology</button>
        </form>
 
       {% endif %}
