--- a/app/views/robotics/current/add-item.html
+++ b/app/views/robotics/current/add-item.html
@@ -30,7 +30,7 @@
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you need to add another robotic or automatic item?
+                Do you need to add another robotic or automatic technology to your project?
               </h1>
             </legend>
            <br>
