--- a/app/views/robotics/current/farming-type.html
+++ b/app/views/robotics/current/farming-type.html
@@ -21,7 +21,7 @@ What is your project about?
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<h1 class="govuk-heading-l">What would you like funding for?</h1>
+<h1 class="govuk-heading-l">What do you need funding for?</h1>
 
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
