--- a/app/views/robotics/current/project-items-summary.html
+++ b/app/views/robotics/current/project-items-summary.html
@@ -22,12 +22,12 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-form-group">
         
-          <h1 class="govuk-heading-l">Your project items</h1>
-          <p class="govuk-!-padding-bottom-4">You can add or remove items you will be using on your project</p>
+          <h1 class="govuk-heading-l">Your project technology</h1>
+          <p class="govuk-!-padding-bottom-4">You can add or remove technology you will be using on your project</p>
           <table class="govuk-table govuk-body govuk-!-font-size-16">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header">Item</th>
+                <th scope="col" class="govuk-table__header">Technology</th>
                 <th scope="col" class="govuk-table__header">Type</th>
                 <th scope="col" class="govuk-table__header">Criteria</th>
                 <th scope="col" class="govuk-table__header">Remove</th>
@@ -90,7 +90,7 @@
             </form>
             <form id="mainForm" class="form" action="robotic-items" method="post">
               <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-              Add another item
+              Add another technology
             </button>
             </form>
           </div>
@@ -106,9 +106,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Automatic items must fit at least 2 criteria to be eligible for funding.</p>
+          <p>Automatic technology must fit at least 2 criteria to be eligible for funding.</p>
 
-          <p>Robotic items must fit all 4 criteria to be eligible for funding.</p>
+          <p>Robotic technology must fit all 4 criteria to be eligible for funding.</p>
 
       </div>
     </div>
