--- a/app/views/robotics/current/solar-installation.html
+++ b/app/views/robotics/current/solar-installation.html
@@ -43,12 +43,7 @@
                   On a rooftop
                 </label>
               </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="solar-installation-2" name="solar-installation" type="checkbox" value="existing">
-                <label class="govuk-label govuk-checkboxes__label" for="solar-installation-2">
-                  On or over an existing hardstanding area
-                </label>
-              </div>
+              
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-installation-3" name="solar-installation" type="checkbox" value="floating">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-installation-3">
@@ -79,10 +74,9 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>Solar panels must be installed:</p>
+          <p>Solar PV panels must be installed:</p>
           <ul class="govuk-list govuk-list--bullet">
-            <li>on a rooftop</li>
-            <li>on or over an existing hardstanding area</li>
+            <li>on a rooftop</li>            
             <li>floating (on a reservoir)</li>
           </ul>              
       </div>
