--- a/app/views/robotics/current/start.html
+++ b/app/views/robotics/current/start.html
@@ -44,7 +44,7 @@
             <li>your business is registered in England or you will do the grant-funded work in England</li>
             
           </ul>
-          <p class="govuk-body">Agricultural contractors can only apply for grant funding for robotic or automatic technology (farm productivity project items).</p>
+          <p class="govuk-body">Agricultural contractors cannot apply for solar project items.</p>
         </div>
 
         <h2 class="govuk-heading-m">What you can apply for</h2>
