--- a/app/views/robotics/current/technology-criteria-fail.html
+++ b/app/views/robotics/current/technology-criteria-fail.html
@@ -24,7 +24,7 @@
     <div class="govuk-grid-column-two-thirds">
       
       <h1 class="govuk-heading-l">
-        You cannot apply for grant funding for this item
+        You cannot apply for grant funding for this technology
       </h1>
 
       <p class="govuk-body">Automatic technology must fit at least 2 criteria to be eligible for grant funding. </p>
