--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,10 +32,10 @@
   <tbody class="govuk-table__body">
 
      <tr class="govuk-table__row">
-      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Productivity grant - Robotics and solar</a>
+      <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Farm productivity and solar grant</a>
         </td>
 
-      <td class="govuk-table__cell">Checker (R2 version 2, last updated on 19 October 2023)</td>
+      <td class="govuk-table__cell">Checker (R2 version 2, last updated on 10 November 2023)</td>
 
     </tr>
 
