--- a/app/views/robotics/current/labour-saved.html
+++ b/app/views/robotics/current/labour-saved.html
@@ -26,10 +26,11 @@
             <h1 class="govuk-fieldset__heading">
               How much manual labour will this technology replace?
             </h1>
-            <div class="govuk-hint">
-              One job is equal to 30 hours more per week
-            </div>
+            
           </legend>
+          <div class="govuk-hint">
+            One job is equal to 30 hours or more per week
+          </div>
 
           <div class="govuk-radios">
             
