--- a/app/views/robotics/current/planning-permission.html
+++ b/app/views/robotics/current/planning-permission.html
@@ -69,8 +69,8 @@
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p>If you need planning permission, you must have secured it before you submit a full application.</p>
-          <p>The application deadline is 30 April 2024</p>
+          <p>You must have secured planning permission before you submit a full application.</p>
+          <p>The application deadline is 31 October 2025</p>
           
           </a>
       </div>
