--- a/app/views/robotics/current/remove-item-2.html
+++ b/app/views/robotics/current/remove-item-2.html
@@ -26,24 +26,24 @@
 
 
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="remove-item-answer" method="post">
+      <form id="mainForm" class="form" action="remove-item2-answer" method="post">
 
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">
-              Are you sure you want to remove  {{ data['robotic-equipment'] | lower }}?
+              Are you sure you want to remove  {{ data['robotic-equipment-2'] | lower }}?
             </h1>
           </legend>
           <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="existing-system" name="remove-item" type="radio" value="yes">
+              <input class="govuk-radios__input" id="existing-system" name="remove-item-2" type="radio" value="yes">
               <label class="govuk-label govuk-radios__label" for="existing-system">
                 Yes
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="existing-system-2" name="remove-item" type="radio" value="no">
+              <input class="govuk-radios__input" id="existing-system-2" name="remove-item-2" type="radio" value="no">
               <label class="govuk-label govuk-radios__label" for="existing-system-2">
                 No
               </label>
