--- a/app/views/robotics/current/planning-permission.html
+++ b/app/views/robotics/current/planning-permission.html
@@ -70,7 +70,7 @@
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p>You must have secured planning permission before you submit a full application.</p>
-          <p>The application deadline is 31 October 2025</p>
+          <p>The application deadline is 31 October 2025.</p>
           
           </a>
       </div>
