--- a/app/views/robotics/current/solar-installation.html
+++ b/app/views/robotics/current/solar-installation.html
@@ -47,7 +47,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-installation-3" name="solar-installation" type="checkbox" value="floating">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-installation-3">
-                  Floating (on a reservoir)
+                  Floating on an irrigation reservoir
                 </label>
               </div>
               <div class="govuk-checkboxes__divider">or</div>
@@ -77,7 +77,7 @@
           <p>Solar PV panels must be installed:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>on a rooftop</li>            
-            <li>floating (on a reservoir)</li>
+            <li>floating on an irrigation reservoir</li>
           </ul>              
       </div>
 
