--- a/app/views/robotics/current/solar-technology.html
+++ b/app/views/robotics/current/solar-technology.html
@@ -77,8 +77,10 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="solar-technology-4" name="solar-technology" type="checkbox" value="diverter">
                 <label class="govuk-label govuk-checkboxes__label" for="solar-technology-4">
-                  Limit-loading power diverter to heat stores
+                  Power diverter                 
                 </label>
+                <div id="waste-hint" class="govuk-hint govuk-checkboxes__hint">Redirects excess solar energy to power storage (for example heat stores)</div>
+                
               </div>
             </div>
           </fieldset>
