--- a/app/views/robotics/current/technology-description-2.html
+++ b/app/views/robotics/current/technology-description-2.html
@@ -60,7 +60,7 @@
         
         <div class="govuk-form-group">
           <label class="govuk-label" for="width-10">
-            Name of item
+            Item name
           </label>
           <input class="govuk-input govuk-input--width-20" id="width-10" name="name-of-item-2" type="text">
         </div>
