--- a/app/views/robotics/current/planning-required-condition.html
+++ b/app/views/robotics/current/planning-required-condition.html
@@ -25,7 +25,7 @@
           You may be able to apply for this grant
         </h1>
 
-        <p>Any planning permission must be in place by 31 October 2025.</p>
+        <p>You must have secured planning permission before you submit a full application. The application deadline is 31 October 2025.</p>
 
             <form class="form" action="{{ nextUrl }}" method="post">
               <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
