--- a/app/views/robotics/current/planning-permission-fail.html
+++ b/app/views/robotics/current/planning-permission-fail.html
@@ -26,7 +26,7 @@
         You cannot apply for a grant from this scheme
       </h1>
 
-      <p>Any planning permission must be in place by 31 October 2025. </p>
+      <p>You must have secured planning permission before you submit a full application.</p>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-body"> See other grants you may be eligible for.</a>
     </p></div>
   </div>
