--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,6 +32,14 @@
   <tbody class="govuk-table__body">
 
      <tr class="govuk-table__row">
+      <td class="govuk-table__cell"><a href="layinghens" class="govuk-lik govuk-link--no-visited-state">Laying hens grant</a>
+        </td>
+
+      <td class="govuk-table__cell">Checker (R1 version 1, last updated on 27 December 2023)</td>
+
+    </tr>
+
+    <tr class="govuk-table__row">
       <td class="govuk-table__cell"><a href="robotics" class="govuk-lik govuk-link--no-visited-state">Farm productivity and solar grant</a>
         </td>
 
